# mailru_telegram_bot

./: Dockerfile  README.md  aws.json  main.py  pyproject.toml
.github/workflows/: docker-image.yml  heroku-awake.yml  heroku_awake.yml  python-app.yml  python-package.yml  workflow.yml
src/: helpers.py  main.py  reverse_polish_notation.py  server.py
src/tests/: test_helpers.py  test_reverse_polish_notation.py
