[tool.poetry]
name = "mailru_telegram_bot"
version = "0.1.0"
description = ""
authors = ["gomonuk <gomoniukde@biocad.ru>"]

[tool.poetry.dependencies]
python = "3.8.12"
aiogram = "^2.14.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
